Add general improvements